@@ -252,3 +252,4 @@ KNOWN BUGS:
   * find a scalable approach to drawing on the canvas
   * fix race conditions
   * not all blocks highlight when using step-by-step mode
+  * use ellipsis on action and do labels (including do blocks in palette)
